lines breaks added for content space

--- a/template/index.html
+++ b/template/index.html
@@ -80,6 +80,18 @@
     <!--Navbar script ends-->
 
     <!--Navbar markup ends-->
+    
+    <!--Relevant content begins here-->
+
+
+    <br> <br> <br> <br> <br> <br>
+    <br> <br> <br> <br> <br> <br>
+    <br> <br> <br> <br> <br> <br>
+    <br> <br> <br> <br> <br> <br>
+    <br> <br> <br> <br> <br> <br>
+    <br> <br> <br> <br> <br> <br>
+    <br> <br> <br> <br> <br> <br>
+    
 
 
 
@@ -90,8 +102,8 @@
 
 
 
-
-
+    
+    <!--Relevant content ends here-->
 
     <!--Contact section begins-->
     <div class="reach">
