added ref to homepage for 'home' link in navbar

--- a/template/index.html
+++ b/template/index.html
@@ -44,16 +44,16 @@
         <!--Navbar markup begins-->
         <nav id="mainNavbar" class="navbar navbar-expand-md fixed-top">
             <div class="container-fluid">
-                    <a class="navbar-brand my-0 py-0" data-toggle="modal" data-target="#logoModal" href="#"><img src="../img/imgs/ieeesb_transparent_logo.png" height="40px" id="brand_logo" alt="IEEE_GEC_logo"></a>
+                    <a class="navbar-brand my-0 py-0" data-toggle="modal" data-target="#logoModal" href="../"><img src="../img/imgs/ieeesb_transparent_logo.png" height="40px" id="brand_logo" alt="Home"></a>
                     <button class="navbar-toggler" id="toggleButton" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class=""><i class="far fa-caret-square-down"></i></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="navbar-nav mr-auto" id="darkBG">
-                        <a class="nav-link nav-item navbarLinks mx-2" id="" href="#"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>               
+                        <a class="nav-link nav-item navbarLinks mx-2" id="" href="../"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>               
                         <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-camera-retro"></i> Gallery</a>                    
                         <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-award"></i> Achievements</a>                        
-                        <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-calendar"></i> Events</a>
+                        <a class="nav-link nav-item navbarLinks mx-2" href="../events/"><i class="fas fa-calendar"></i> Events</a>
                     </div>
                     </div>
             </div>
