--- a/events/hacktohelp/style.css
+++ b/events/hacktohelp/style.css
@@ -69,7 +69,7 @@ body {
     width: 90vw;    
     border-radius: 0% !important; 
     z-index: 50;
-    margin-top: 1.2%;
+    margin-top: -2.8%;
     background: url('/events/hacktohelp/imgs/hack-2-help-jumbotron-2.jpg');
     background-size: cover;
     -webkit-background-size: cover;
@@ -113,11 +113,13 @@ body {
     font-weight: 500;
 }
 
-.nutan-img{
-    height: 0% !important;
+.people-img{
+    display: inline-block;
+    /*flex-direction: column; */
+    height: 65% !important;
     width: 55%;
-    border-radius: 10px;
-    box-shadow: -2px -1px 12px -2px #000000;
+    border-radius: 10px !important;
+   /* box-shadow: -2px -1px 12px -2px #000000;*/
 }
 
 .winner-section{
