Refixed events page

--- a/about/style.css
+++ b/about/style.css
@@ -6,7 +6,7 @@
 
 /* Navbar style begins*/
 body {
-	padding-top: 2%;
+	padding-top: 70px;
 } /* NAV - Might not be required in Main Page */
 
 #mainNavbar {
